[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.27",
]

[project]
name = "tap-pipedream"
description = "Singer tap for Pipedream, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Pipedream",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
maintainers = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
authors = [
  { name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" },
]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.47.0",
]
urls.Documentation = "https://github.com/edgarrmondragon/tap-pipedream#readme"
urls.Homepage = "https://github.com/edgarrmondragon/tap-pipedream"
urls.Repository = "https://github.com/edgarrmondragon/tap-pipedream"
scripts.tap-pipedream = "tap_pipedream.tap:TapPipedream.cli"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=7.4",
  "singer-sdk[testing]",
]
typing = [
  "mypy",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 88
src = [
  "tap_pipedream",
  "tests",
]

lint.select = [
  "ALL",
]
lint.ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenation
]

lint.per-file-ignores."noxfile.py" = [
  "ANN",
]
lint.per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
lint.unfixable = [
  "ERA001", # commented-out-code
]
lint.isort.known-first-party = [
  "tap_pipedream",
]
lint.isort.required-imports = [
  "from __future__ import annotations",
]
lint.pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.pytest.ini_options]
addopts = "-vvv"
filterwarnings = [
  "error",
  "default:No records were available to test:UserWarning",
  "default:No records returned in stream 'user_source_events':UserWarning",
  "default:No records returned in stream 'user_sources':UserWarning",
  "default:No records returned in stream 'user_subscriptions':UserWarning",
  "default:No records returned in stream 'webhooks':UserWarning",
  "default:Fields in transformed catalog but not in records:UserWarning",
  # Deprecation message introduced in Python 3.14. Upstream PR: https://github.com/litl/backoff/pull/220
  "default:'asyncio.iscoroutinefunction' is deprecated and slated for removal in Python 3.16:DeprecationWarning",
]

[tool.mypy]
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "backoff.*",
]

[tool.uv]
prerelease = "allow"
required-version = ">=0.7.0"
