[build-system]
build-backend = "hatchling.build"
requires = [
  "hatch-vcs==0.5",
  "hatchling==1.29",
]

[project]
name = "tap-pipedream"
description = "Singer tap for Pipedream, built with the Meltano SDK for Singer Taps."
readme = "README.md"
keywords = [
  "ELT",
  "Pipedream",
  "singer.io",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = [
  "version",
]
dependencies = [
  "singer-sdk~=0.53.2",
]
[[project.authors]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[[project.maintainers]]
name = "Edgar Ramírez-Mondragón"
email = "edgarrm358@gmail.com"
[project.scripts]
tap-pipedream = "tap_pipedream.tap:TapPipedream.cli"
[project.urls]
Documentation = "https://github.com/reservoir-data/tap-pipedream#readme"
Homepage = "https://github.com/reservoir-data/tap-pipedream"
Repository = "https://github.com/reservoir-data/tap-pipedream"

[dependency-groups]
dev = [
  { include-group = "testing" },
  { include-group = "typing" },
]
testing = [
  "deptry>=0.12",
  "pytest>=9",
  "singer-sdk[testing]",
]
typing = [
  "mypy",
  "ty>=0.0.8",
]

[tool.hatch.version]
source = "vcs"

[tool.uv]
required-version = ">=0.7.0"
prerelease = "allow"

[tool.ruff]
line-length = 88
src = [
  "tap_pipedream",
  "tests",
]
[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "COM812", # missing-trailing-comma
  "DJ",     # flake8-django
  "ISC001", # single-line-implicit-string-concatenation
]
per-file-ignores."noxfile.py" = [
  "ANN",
]
per-file-ignores."tests/*" = [
  "ANN201", # missing-return-type-public-function
  "S101",   # assert
  "SLF001", # private-member-access
]
unfixable = [
  "ERA001", # commented-out-code
]
isort.known-first-party = [
  "tap_pipedream",
]
isort.required-imports = [
  "from __future__ import annotations",
]
pydocstyle.convention = "google"

[tool.deptry.package_module_name_map]
mypy = "mypy"
ty = "ty"

[tool.pyproject-fmt]
table_format = "long"

[tool.pytest]
addopts = [
  "-vvv",
  "-ra",
  "--strict-config",
  "--strict-markers",
]
filterwarnings = [
  "error",
  "default:No records were available to test:UserWarning",
  "default:No records returned in stream 'user_source_events':UserWarning",
  "default:No records returned in stream 'user_sources':UserWarning",
  "default:No records returned in stream 'user_subscriptions':UserWarning",
  "default:No records returned in stream 'webhooks':UserWarning",
  "default:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
testpaths = [ "tests" ]
xfail_strict = true

[tool.tox]
min_version = "4.22"
requires = [
  "tox>=4.22",
  "tox-uv",
]
env_list = [
  "dependencies",
  "typing",
  { product = [
    { prefix = "3.", start = 12 },
  ] },
]
[tool.tox.env.dependencies]
dependency_groups = [ "testing" ]
commands = [ [ "deptry", "." ] ]
[tool.tox.env.typing]
dependency_groups = [ "testing", "typing" ]
commands = [
  [ "mypy", { replace = "posargs", default = [ "tap_pipedream", "tests" ], extend = true } ],
  [ "ty", "check", { replace = "posargs", default = [ "tap_pipedream", "tests" ], extend = true } ],
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
pass_env = [ "TAP_PIPEDREAM_*" ]
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.mypy]
enable_error_code = [
  "ignore-without-code",
  "redundant-expr",
  "truthy-bool",
]
strict = true
warn_redundant_casts = true
warn_return_any = true
warn_no_return = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
